conformance/tests/httproute-named-rule.yaml
# Copyright IBM Corp. 2019, 2022
# SPDX-License-Identifier: Apache-2.0

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-named-rules
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - name: named-rule
    matches:
    - path:
        type: PathPrefix
        value: /named
    backendRefs:
    - name: infra-backend-v1
      port: 8080
  - matches:
    - path:
        type: PathPrefix
        value: /unnamed
    backendRefs:
    - name: infra-backend-v2
      port: 8080
